# tan-lang

./: .clang-format  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  ast.c  ast.h  interpreter.c  interpreter.h  lexer.c  lexer.h  main.c  parser.c  parser.h  unreachable.h  value.c  value.h
